[package]
name = "rustp2p"
version = "0.1.12"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A decentralized p2p library powered by Rust, which is devoted to simple use. "
repository = "https://github.com/rustp2p/rustp2p"

[dependencies]
rust-p2p-core = { path = "rustp2p-core", version = "0.1.6" }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
crossbeam-utils = { workspace = true }
crossbeam-queue = { workspace = true }
async-shutdown = "0.2.2"
rmp-serde = "1.3.0"
dns-parser = "0.8.0"

ring = { version = "0.17.8", optional = true }
sha2 = "0.10.8"

[dev-dependencies]
rustp2p = { path = "../rustp2p", features = ["aes-gcm"] }
clap = { version = "=4.0.32", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
tun-rs = { version = "1", features = ["async"] }
mimalloc-rust = { version = "0.2.1" }
pnet_packet = "0.35.0"
ctrlc2 = { version = "3", features = ["tokio", "termination"] }

[[example]]
name = "node"
path = "examples/node.rs"

[workspace]
resolver = "2"
members = [
    "rustp2p-core"
]

[workspace.dependencies]
anyhow = "1.0.86"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
async-trait = "0.1.81"
log = "0.4.17"
parking_lot = "0.12"
bytes = "1.7.1"
dashmap = "6.1"
rand = "0.8.5"
crossbeam-utils = "0.8"
crossbeam-queue = "0.3.11"

[features]
default = []
aes-gcm = ["ring"]