[workspace]
resolver = "2"
members = ["rustp2p-core", "rustp2p-quic"]

[workspace.dependencies]
rust-p2p-core = { path = "rustp2p-core", version = "0.4" }
tachyonix = "0.3"
thiserror = "2"
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
log = "0.4"
parking_lot = "0.12"
bytes = "1.9"
dashmap = "6.1"
rand = "0.9"
crossbeam-utils = "0.8"
crossbeam-queue = "0.3"
kcp = {version = "0.6.0",features = ["tokio"]}
tokio-util = "0.7"
flume = { version = "0.11.1", features = ["async"] }
async-shutdown = "0.2"
