[package]
name = "rustp2p-c-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "C FFI bindings for rustp2p"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
rustp2p = { path = "..", version="0.4.0", features = ["aes-gcm-ring"] }
tokio = { workspace = true }
libc = "0.2"

[features]
default = ["aes-gcm-ring"]
aes-gcm-openssl = ["rustp2p/aes-gcm-openssl"]
chacha20-poly1305-openssl = ["rustp2p/chacha20-poly1305-openssl"]
aes-gcm-ring = ["rustp2p/aes-gcm-ring"]
chacha20-poly1305-ring = ["rustp2p/chacha20-poly1305-ring"]
