[package]
name = "rust-p2p-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "Simple, fast and easy Nat traversal for peer-to-peer"
repository = "https://github.com/rustp2p/rustp2p"

[dependencies]
anyhow = "1.0.82"
log = "0.4.17"
parking_lot = "0.12.1"

bytes = "1.7.1"
socket2 = { version = "0.5.7", features = ["all"] }
network-interface = "2.0.0"
futures = "0.3.30"
tokio-util = { version = "0.7.11", features = ["full"] }
tokio = { version = "1.39.2", features = ["full"] }
crossbeam-utils = "0.8"
rand = "0.8.5"
stun-format = { version = "1.0.1", features = ["fmt", "rfc3489"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.0.1"
crossbeam-skiplist = "0.1.3"
async-trait = "0.1.81"
thiserror = "1.0"
async-scoped = { version = "0.9.0",features = ["use-tokio"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming", ] }

[dev-dependencies]
ctrlc2 = "3.5"
bytes = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.124"
clap = { version = "4.5.13", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "client"
path = "examples/client.rs"