[package]
name = "rustp2p-reliable"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-p2p-core = { path = "../rustp2p-core", version = "0.3" }
kcp = { workspace = true }

tokio = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
flume = { workspace = true }
tachyonix = { workspace = true }
async-shutdown = { workspace = true }

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
bytes = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "=4.0.32", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"